test: :zap: 回滚合并的代码

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -72,6 +72,7 @@
     "pinned": "Pin",
     "featured": "Hot",
     "page-views-value": "Page Views: ",
+    "unique_visitor-value": "Unique Visitors: ",
     "site-running-for": "Up time: ",
     "site-running-for-unit": "days",
     "links": "Friend Links",
