--- a/src/locales/languages/zh-CN.json
+++ b/src/locales/languages/zh-CN.json
@@ -72,6 +72,7 @@
     "pinned": "置顶",
     "featured": "推荐",
     "page-views-value": "浏览次数：",
+    "unique_visitor-value": "浏览人数：",
     "site-running-for": "建站天数：",
     "site-running-for-unit": "天",
     "links": "友情链接",
