--- a/src/locales/languages/zh-TW.json
+++ b/src/locales/languages/zh-TW.json
@@ -72,6 +72,7 @@
     "pinned": "置頂",
     "featured": "推薦",
     "page-views-value": "瀏覽次數：",
+    "unique_visitor-value": "瀏覽人數：",
     "site-running-for": "建站天數：",
     "site-running-for-unit": "天",
     "links": "友情鏈接",
